manifest/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an agreement</description>
    <fields>
        <fullName>APTS_Agreement_Account__c</fullName>
        <formula>Apttus__AgreementId__r.Apttus__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Allowed_Book_of_Business_Incr_Amt__c</fullName>
        <label>Allowed Book of Business Increase Amount</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Annual_Fees_Calc__c</fullName>
        <formula>APTS_Quote_Line__r.Annual_Fee_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Fees Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Auto_Member_Price_Increase_at_Renwl__c</fullName>
        <label>Auto Member Price Increase at Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>3%</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Bundle_Type__c</fullName>
        <formula>TEXT( APTS_Quote_Line__r.L2O_Bundle_Type__c )</formula>
        <label>Bundle Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Case_Rate__c</fullName>
        <inlineHelpText>Price per case - Enter as price/number of cases (e.g., $100/2 cases)</inlineHelpText>
        <label>Case Rate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Change_Consult_Fee_Notice__c</fullName>
        <label>Change Consult Fee Notice (Days)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fee_Therapy_Ongoing__c</fullName>
        <formula>85</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult Fee Therapy Ongoing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fee__c</fullName>
        <formula>APTS_Quote_Line__r.L2O_Consult_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consult Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fees1__c</fullName>
        <label>Consult Fees1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fees_1__c</fullName>
        <label>Consult Fees 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fees_2__c</fullName>
        <label>Consult Fees 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fees_3__c</fullName>
        <label>Consult Fees 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Fees__c</fullName>
        <description>Opportunity Consult Fees</description>
        <label>Consult Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consult_Type__c</fullName>
        <description>Opportunity Consult Type</description>
        <label>Consult Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Copy_of_APTS_Total_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Copy of APTS_Total_Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_End_of_Life_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End of Life Date</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items (End of Life Date)</relationshipLabel>
        <relationshipName>Agreement_Line_Items_end_of_life_date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Code_1__c</fullName>
        <label>Fee Code 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Code_2__c</fullName>
        <label>Fee Code 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Code_3__c</fullName>
        <label>Fee Code 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Code__c</fullName>
        <formula>APTS_Quote_Line__r.L2O_Fee_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Description__c</fullName>
        <formula>TEXT(APTS_Quote_Line__r.L2O_Fee_Description__c)</formula>
        <label>Fee Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Inc_Amt_Utilization_Cap__c</fullName>
        <inlineHelpText>1. of days&apos; notice required to increase the PEPM at renewal</inlineHelpText>
        <label>Fee Inc. Amt. Based on Utilization Cap</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PEPM</fullName>
                </value>
                <value>
                    <fullName>PMPM</fullName>
                </value>
                <value>
                    <fullName>PPPM</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
                <value>
                    <fullName>Case Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Incremental_Percent__c</fullName>
        <label>Incremental Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Initial_Utilization_Cap1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Initial Utilization Cap</description>
        <label>Initial Utilization Cap</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipLabel>Agreement Line Items (Initial Utilization Cap)</relationshipLabel>
        <relationshipName>Agreement_Line_Items_inital_cap</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Initial_Utilization_Cap2__c</fullName>
        <formula>APTS_Product__r.SBQQ__QuoteLine__r.SBQQ__Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Initial_Utilization_Cap_Value__c</fullName>
        <formula>IF( NOT(ISNULL(APTS_Quote_Line__r.L2O_Initial_Utilization_Cap_Override__c)),APTS_Quote_Line__r.L2O_Initial_Utilization_Cap_Override__c,APTS_Quote_Line__r.L2O_Initial_Utilization_Cap__c)</formula>
        <label>Initial Utilization Cap Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Initial_Utilization_Cap__c</fullName>
        <label>Initial Utilization Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item_Section__c</fullName>
        <label>Line Item Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Membership_Fee__c</fullName>
        <label>Membership Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Membership_Fees1__c</fullName>
        <label>Membership Fees1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Membership_Fees__c</fullName>
        <formula>APTS_Product__r.TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_Fee_Per_Unit__c</fullName>
        <label>Monthly Fee Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Monthly_Price__c</fullName>
        <description>Opportunity Monthly Price</description>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Not_Salable_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Not Salable Date</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items (Not Salable Date)</relationshipLabel>
        <relationshipName>Agreement_Line_Items_not_salable_date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Not_Supported_Date__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Not Supported Date</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items (Not Supported Date)</relationshipLabel>
        <relationshipName>Agreement_Line_Items_not_supported_date</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_NumberofLives__c</fullName>
        <label>Number of Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PEPM_Fee_Increase_at_Renewal__c</fullName>
        <label>PEPM Fee Increase at Renewal Not.(Days)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ParentProduct__c</fullName>
        <formula>APTS_Required_By__r.SBQQ__ProductCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentProduct</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Per_Month_Calc__c</fullName>
        <formula>APTS_Quote_Line__r.Per_Month_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Month Calc</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_ProductName__c</fullName>
        <inlineHelpText>Opportunity Product name</inlineHelpText>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ProductType__c</fullName>
        <formula>IF( OR( APTS_Quote_Line__r.QuoteSec__c=&apos;Equipment&apos;,APTS_Quote_Line__r.QuoteSec__c=&apos;Leased Solution&apos;),&apos;HardwareBundle&apos;,Text(APTS_Quote_Line__r.SBQQ__SubscriptionPricing__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <formula>Apttus__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_End_Date__c</fullName>
        <inlineHelpText>To be left blank if no actual end date specified.</inlineHelpText>
        <label>Product End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Family__c</fullName>
        <formula>TEXT( Apttus__ProductId__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Specific_Comments__c</fullName>
        <label>Product-Specific Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Start_Date__c</fullName>
        <label>Product Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Status__c</fullName>
        <label>Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product(Opportunity Product)</label>
        <referenceTo>OpportunityLineItem</referenceTo>
        <relationshipLabel>Agreement Line Items (Opportunity Product)</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_QuoteLine_Quantity__c</fullName>
        <formula>APTS_Quote_Line__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteLine Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Extended_Price__c</fullName>
        <formula>If(APTS_Quote_Line__r.Display_Total__c&gt;0,APTS_Quote_Line__r.Display_Total__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Agreement Line Items (Quote Line)</relationshipLabel>
        <relationshipName>Agreement_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Total_Price__c</fullName>
        <description>Opportunity Total Price</description>
        <label>Total Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Required_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredBy</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Agreement Line Items (RequiredBy)</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Required_by_Product__c</fullName>
        <formula>APTS_Quote_Line__r.SBQQ__RequiredBy__r.SBQQ__Product__r.Name</formula>
        <label>Required by(Product)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sale_Type__c</fullName>
        <description>Quote line item value</description>
        <label>Sale Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Term_in_Months__c</fullName>
        <label>Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Tiered_Membership_Price_Code__c</fullName>
        <inlineHelpText>Select the applicable tiered membership pricing price code</inlineHelpText>
        <label>Tiered Membership Price Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Total Book</fullName>
                </value>
                <value>
                    <fullName>Individual Group Size</fullName>
                </value>
                <value>
                    <fullName>Utilization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Tiered_Membership_Pricing__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <inlineHelpText>Indicates whether the client has tiered membership pricing</inlineHelpText>
        <label>Tiered Membership Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Tiered_Membership_Threshold__c</fullName>
        <label>Tiered Membership Threshold</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Monthly_Fee1__c</fullName>
        <formula>APTS_QuoteLine_Quantity__c * APTS_Quote_Line__r.SBQQ__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Monthly Fee1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Monthly_Fees__c</fullName>
        <label>Total Monthly Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Price__c</fullName>
        <formula>APTS_Product__r.TotalPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price(Opportunity Product)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Status__c</fullName>
        <description>Approval status of the agreement line item</description>
        <inlineHelpText>Approval status of the agreement line item</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__NetPrice__c</fullName>
        <description>The net price for the product or service is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Includes_MH_for_Adolescents__c</fullName>
        <formula>APTS_Quote_Line__r.L2O_Adolescent_Population__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Includes MH for Adolescents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration mapping to legacy orgs</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Agreement Line Item</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>